# pyCiSSA

./: .gitignore  README.md  Untitled.ipynb  pycissa.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
examples/.ipynb_checkpoints/: pyCissa_test_electricity_consumption_Spain-checkpoint.ipynb
examples/cissa/auto_cissa_examples/: Auto-Cissa-Copy1.ipynb  Auto-Cissa.ipynb  Automatic denoising - Monte Carlo Surrogates L = 23 years.ipynb  Automatic denoising - Monte Carlo Surrogates L = 4 years.ipynb  Automatic denoising - Monte Carlo Surrogates.ipynb  Automatic denoising - number, proportion of components.ipynb  Automatic trend removal..ipynb  Automatic trend removal.ipynb
examples/cissa/gap_filling/: Gap filling - Effect of window length L.ipynb  Gap filling - Monte Carlo.ipynb  Gap filling - Optimised number of components to drop vs Monte Carlo.ipynb  Gap filling - effect of convergence threshold.ipynb
examples/cissa/other/: testing_t_initiation.ipynb
examples/cissa/validation_tests/: Matlab_vs_Python_Comparison.ipynb  Matlab_vs_Python_Comparison_auto_cissa_classic.ipynb
examples/web_app/: app.py
pyCiSSA/: README.md  pycissa.py
pycissa/utilities/: autoregression_functions.py  date_time_utilities.py  extendseries.py  generate_cissa_result_dictionary.py  plotting.py
test_example/: .~lock.EPC.xlsx#  EPC.xlsx  pyCiSSA_gap_filling.ipynb  pyCissa_test_electricity_consumption_Spain.ipynb
test_example/.ipynb_checkpoints/: pyCissa_test_electricity_consumption_Spain-checkpoint.ipynb
tests/: test_cissa_processing.py
(+26 files in other folders)
