[tool.poetry]
name = "pycissa"
version = "0.1.0"
description = "A Python implementation of the Circulant singular spectrum analysis (CiSSA) algorithm (https://github.com/jbogalo/CiSSA)"
authors = ["Luke Fullard <lukeafullard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
statsmodels = "^0.14.1"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
piecewise-regression = "^1.5.0"
nolds = "^0.6.0"
MAPIE = "^0.9.0"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
